
[TestDashboardView_ResourceMenu - 1]
resource_menu_open
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestDashboardView_ResourceMenu - 2]
inspect_view
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.InfoMenuView",
      "Data": {
        "Type": "InfoMenuView",
        "Handle": "test-ws",
        "ItemCount": 4,
        "SelectedIdx": 0
      }
    }
  ]
}
---

[TestDashboardView_ResourceMenu - 3]
inspect_dismissed
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 5,
        "SelectedIdx": 0
      }
    }
  ]
}
---
